name: reactivision
version: 1.0.0.2
cabal-version: >=1.6
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: (c) Simon Marlow
maintainer: Simon Marlow <marlowsd@gmail.com>
stability: stable
homepage: http://www.haskell.org/hello/
bug-reports: mailto:marlowsd@gmail.com
synopsis: Hello World, an example package
description: This is an implementation of the classic "Hello World" program in
             Haskell, as an example of how to create a minimal Haskell
             application using Cabal and Hackage.  Please submit any suggestions and
             improvements.
category: Console, Text
author: Simon Marlow
data-dir: ""

source-repository head
    type: darcs
    location: http://darcs.haskell.org/hello/

flag threaded
    Default: False

executable reactivision
    build-depends: base >=4.2 && <5,
                   attoparsec == 0.12.*,
                   binary == 0.7.*,
                   bytestring == 0.10.*,
                   data-binary-ieee754 == 0.4.*,
                   network == 2.6.*

    if flag(threaded)
        buildable: True
        ghc-options: -threaded
    main-is: hello.hs
    buildable: True
    hs-source-dirs: src
    other-modules: OSC


